# bevy_cube

./: Cargo.toml
src/: main.rs
src/camera/: camera_component.rs  mod.rs
src/platform/: mod.rs  platform_component.rs
src/player/: mod.rs
