[package]
name = "bevy_cube"
version = "0.1.0"
edition = "2021"


# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# [profile.release]
# codegen-units = 1
# lto = "thin"


[dependencies]
bevy = "0.14.2"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_editor_pls = "0.9.0"
bevy_rapier3d = "0.27.0"
